# SarvilTorrent

./: Cargo.toml  README.md  sarvil.txt
Client/: client.rs  verification.rs
Server/: server.rs  verification.rs
