[package]
name = "Seed"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "server"
path = "Server/server.rs"
[[bin]]
name = "client"
path = "Client/client.rs"
[dependencies]
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
